API consistency and improvements (#339)
* DBOS.registerWorkflows -> registerProxy
* added public DBOS.registerWorkflow method
* static DBOS hasWorkflows, getWorkflowName, getWorkflowClassName
helpers
* DBOS.startWorkflow overloads accept null StartWorkflowOptions
* DBOS.startWorkflow for registered workflows -> startRegisteredWorkflow
* DBOS.getWorkflowStatus returns Optional
* DBOS.recv  & getEvent return generic Optional<T>
* DBOSClient.getEvent return generic Optional<T>
* added DBOS.getRegisteredWorkflow method
* changed DBOSClient.EnqueueOptions ctor param order for consistency
* WorkflowStatus.status string -> WorkflowState
* Update SysDB w/ dbRetry (SqlRunnable) to reduce boilerplate for void
return methods
* simplify delegate invocation / use method references where possible