@@ -19,14 +19,13 @@ public class ListStepsResponse extends BaseResponse {
     public String completed_at_epoch_ms;
 
     public Step(StepInfo info) {
-      Object output = info.output();
+      var output = info.output();
       var error = info.error();
 
       this.function_id = info.functionId();
       this.function_name = info.functionName();
       this.output = output != null ? JSONUtil.toJson(output) : null;
-      this.error =
-          error != null ? String.format("%s: %s", error.className(), error.message()) : null;
+      this.error = error != null ? "%s: %s".formatted(error.className(), error.message()) : null;
       this.child_workflow_id = info.childWorkflowId();
       this.started_at_epoch_ms =
           info.startedAtEpochMs() == null ? null : info.startedAtEpochMs().toString();
